[tool.poetry]
name = "code-generator"
version = "0.1.0"
description = ""
authors = ["Vasek Mlejnsky <vasek.mlejnsky@gmail.com>"]
readme = "README.md"
packages = [{include = "code_generator"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
openai = "^0.27.0"
langchain = { git = "https://github.com/mlejva/langchain", branch = "agents-with-openaichat" }
python-dotenv = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
